--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,22 +17,22 @@
                 <h3 class="float-md-left mb-0">YelpCamp</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-right">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="/campgrounds">Campgrounds</a>
+                    <a class="nav-link" href="/freelancers">Freelancers</a>
                     <% if(!currentUser) { %>
-                    <a class="nav-link" href="/login">Login</a>
-                    <a class="nav-link" href="/register">Register</a>
-                    <% } else { %>
-                    <a class="nav-link" href="/logout">Logout</a>
-                    <% } %>
+                        <a class="nav-link" href="/login">Login</a>
+                        <a class="nav-link" href="/register">Register</a>
+                        <% } else { %>
+                            <a class="nav-link" href="/logout">Logout</a>
+                            <% } %>
                 </nav>
             </div>
         </header>
         <main class="px-3">
             <h1>YelpCamp</h1>
-            <p class="lead"> Welcome to YelpCamp! <br> Jump right in and explore our many campgrounds. <br>
+            <p class="lead"> Welcome to YelpCamp! <br> Jump right in and explore our many freelancers. <br>
                 Feel free to share some of your own and comment on others!</p>
-            <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
-                Campgrounds</a>
+            <a href="/freelancers" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
+                Freelancers</a>
         </main>
 
         <footer class="mt-auto text-white-50">
