--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,8 +8,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link" href="/">Home</a>
-                <a class="nav-link" href="/campgrounds">Campgrounds</a>
-                <a class="nav-link" href="/campgrounds/new">New Campground</a>
+                <a class="nav-link" href="/freelancers">Freelancers</a>
+                <a class="nav-link" href="/freelancers/new">Create Freelancer Profile</a>
             </div>
             <div class="navbar-nav ml-auto">
                 <% if(typeof currentUser==='undefined' ) {%>
