--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,8 @@
         </header>
         <main class="px-3">
             <h1>YelpCamp</h1>
-            <p class="lead"> Welcome to YelpCamp! <br> Jump right in and explore our many freelancers. <br>
+            <p class="lead"> Welcome to Freelance Talent Network! <br> Jump right in and explore our many freelancers.
+                <br>
                 Feel free to share some of your own and comment on others!</p>
             <a href="/freelancers" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
                 Freelancers</a>
